Commit inicial de prueba

--- a/archivo2.html
+++ b/archivo2.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chanchito Feliz</title>
+    
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+     Possimus architecto tempore praesentium impedit placeat explicabo, accusantium recusandae, nesciunt eius beatae est. Ratione iste dolorem corrupti architecto natus 
+     porro consectetur rerum?</p>
 </body>
 </html>
