--- a/archivo2.html
+++ b/archivo2.html
@@ -10,5 +10,9 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
      Possimus architecto tempore praesentium impedit placeat explicabo, accusantium recusandae, nesciunt eius beatae est. Ratione iste dolorem corrupti architecto natus 
      porro consectetur rerum?</p>
+
+        <p>Hola este es un parrafo nuevo
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolorum magni quisquam, non ratione aspernatur consequuntur optio dolores cumque velit vero corrupti eveniet distinctio odio esse earum nobis! Cum, nobis!
+        </p>
 </body>
 </html>
